re PR target/36904 (vector context sensitive keyword vs macros)

PR target/36904
	* config/rs6000/rs6000-c.c (rs6000_macro_to_expand): Return NULL
	instead of tok->val.node if not expanding to something else.  Handle
	intervening CPP_PADDING tokens.
	(altivec_categorize_keyword): Remove unneeded comparisons.

	* gcc.target/powerpc/altivec-27.c: New test.

From-SVN: r140247